--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,104 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.d-flex {
+  display: flex;
+  align-items: center;
+}
+
+/* styles */
+.btn {
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  background-color: #3B71CA;
+  color: #ffffff;
+  font-weight: 600;
+  min-width: 7rem;
+  height: 44px;
+}
+
+.check-box.active+label {
+  color: #3B71CA;
+}
+
+.del-icon {
+  fill: red;
+  cursor: pointer;
+}
+
+.active+label {
+  /* color: #3B71CA;
+   */
+  text-decoration: line-through;
+}
+
+.page-bg {
+  background-color: rgba(59, 113, 202, 0.54);
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 22px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.page-bg.header {
+  background-color: #3bc9ca;
+}
+
+.add-item {
+  padding: 20px;
+}
+
+.add-item input {
+  height: 54px;
+  padding: 0 15px 0 15px;
+}
+
+.add-item label {
+  height: 54px;
+  margin-right: 15px;
+}
+
+.add-item button {
+  height: 54px;
+  width: 45px;
+}
+
+
+.display-box {
+  height: 200px;
+  width: 200px;
+  border: 1px solid #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.display-box p {
+  margin: 0;
+}
+
+.input-box {
+  max-width: 500px;
+  height: 44px;
+  padding: 0 15px 0 15px;
+}
+
+.toggle-btn.btn {
+  width: 200px;
+}
+
+.bdr-line {
+  border: 1px dotted red;
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
